# rust-rocket-api

./: Cargo.toml
src/: main.rs
src/models/: cep.rs  mod.rs  response.rs  viacep.rs
src/routes/: cep.rs  mod.rs
src/services/: mod.rs  viacep.rs
