[package]
name = "rust-rocket-api"
version = "0.1.0"
authors = ["Danilo Rodrigues <mydanilows@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"